Compiler implementation for extending support for primitive types in `instanceof`, type patterns and switch